feat(ai): Integrate AgentScope client and refactor AI call service
- Add AgentScopeClient service class to centrally manage AI model calls
- Migrate AI call logic from CoachService to AgentScopeClient
- Add default null values in configuration file to prevent startup errors
- Add proxy support configuration for network access control
- Optimize AI call implementation in memory service
- Update test configuration to support context loading in disabled state
- Remove duplicate model configuration code in CoachService
- Unify JSON type references to simplify object mapping
- Improve prompt configuration for daily summary and signal extraction
- Optimize message history retrieval logic